force-app/main/default/objects/Portal_button_filter__mdt/Portal_button_filter__mdt.object-meta.xml
<CustomObject>
    <description>Connect criterium, for example: Name EQUALS &apos;Bob&apos; for filtering by name, to visibility setting and numbers the condition that&apos;s formed this way for use in filter logic.</description>
    <label>Portal button filter</label>
    <pluralLabel>Portal button filters</pluralLabel>
</CustomObject>