force-app/main/default/objects/Portal_button_filter__mdt/fields/Criterium__c.field-meta.xml
<CustomField>
    <fullName>Criterium__c</fullName>
    <description>Determines what logic applies to this filter.</description>
    <inlineHelpText>Determines what logic applies to this filter.</inlineHelpText>
    <label>Criterium</label>
    <referenceTo>Criterium__mdt</referenceTo>
    <relationshipLabel>Portal button filters</relationshipLabel>
    <relationshipName>Portal_button_filters</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>