force-app/main/default/objects/Portal_button_filter__mdt/fields/Number__c.field-meta.xml
<CustomField>
    <fullName>Number__c</fullName>
    <description>Identifier for filter, used in filter logic formula on Portal button visbility record. You have to fill this manually and make sure it is unique, because we can&apos;t have triggers on custom metadata (sorry). Numbers higher than 9 are not supported because I wrote the parsing lazily.</description>
    <inlineHelpText>Identifier for filter, used in filter logic formula on Portal button visbility record. You have to fill this manually and make sure it is unique, because we can&apos;t have triggers on custom metadata (sorry). Numbers higher than 9 are not supported because I wrote the parsing lazily.</inlineHelpText>
    <label>Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>