force-app/main/default/objects/Portal_button_filter__mdt/fields/Visibility__c.field-meta.xml
<CustomField>
    <fullName>Visibility__c</fullName>
    <description>Lookup to button visibility setting this filter is part of.</description>
    <inlineHelpText>Lookup to button visibility setting this filter is part of.</inlineHelpText>
    <label>Visibility</label>
    <referenceTo>Portal_button_visibility__mdt</referenceTo>
    <relationshipLabel>Portal button filters</relationshipLabel>
    <relationshipName>Portal_button_filters</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>